force-app/main/default/objects/QTB_Box_Summary__c/QTB_Box_Summary__c.object-meta.xml
<CustomObject>
    <label>Box Summary</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Box Summary #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Box Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>