force-app/main/default/objects/QTB_Box_Summary__c/fields/QTB_Box_Description__c.field-meta.xml
<CustomField>
    <fullName>QTB_Box_Description__c</fullName>
    <label>Box Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>