force-app/main/default/objects/QTB_Box_Summary__c/fields/QTB_Box_Type__c.field-meta.xml
<CustomField>
    <fullName>QTB_Box_Type__c</fullName>
    <label>Box Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>