force-app/main/default/objects/QTB_Box_Summary__c/fields/QTB_Department_Name__c.field-meta.xml
<CustomField>
    <fullName>QTB_Department_Name__c</fullName>
    <label>Department Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>