force-app/main/default/objects/QTB_Box_Summary__c/fields/QTB_Division_Name__c.field-meta.xml
<CustomField>
    <fullName>QTB_Division_Name__c</fullName>
    <label>Division Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>