force-app/main/default/objects/QTB_Box_Summary__c/fields/QTB_Total_Boxes__c.field-meta.xml
<CustomField>
    <fullName>QTB_Total_Boxes__c</fullName>
    <label>Total Boxes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>